# Claude_ICT

./: .env.example  .gitignore  ANALISE_CRITICA_E_PLANO.md  CLAUDE.md  COMECE_AQUI_PT.md  ICT_System_Project_v2.md  NEXT_STEPS.md  PHASE_0_CHECKLIST.md  PHASE_8_QUICK_START.md  PHASE_8_SHADOW_TRADING.md  PHASE_8_SHADOW_TRADING_RESULTS.md  PROJECT_STATE.md  README.md  SETUP_COMPLETE.md  pyproject.toml
.claude/skills/analyze/: SKILL.md
cli/: main.py
config/: account.example.yaml  sessions.yaml  symbols.yaml
data_pipeline/: audit.py  collector.py  fixtures.py  market_clock.py  mt5_client.py  news_client.py  oanda_client.py  quality.py  schemas.py
ict_engine/: liquidity.py  risk.py  setups.py  structure.py  swings.py  validator.py
rules/: execution_policy.md  ict_definitions.md  report_template.md
tests/: _util.py  test_collect_live.py  test_liquidity.py  test_market_clock.py  test_news.py  test_quality.py  test_risk_ftmo.py  test_schemas.py  test_setups.py  test_structure.py  test_swings.py  test_validator.py
