[project]
name = "ict-analysis-system"
version = "0.1.0"
description = "ICT trading analysis system for FTMO Challenge (Claude Code CLI)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
live = ["MetaTrader5; sys_platform == 'win32'"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["data_pipeline*", "ict_engine*", "cli*"]
